[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ServerAPI/dlc_loader.gd" type="Script" id=1]

[node name="DLCLoader" type="Node2D"]
script = ExtResource( 1 )

[node name="download_dlc_list" type="HTTPRequest" parent="."]

[node name="download_dlc_cfg" type="HTTPRequest" parent="."]

[node name="download_dlc_files" type="HTTPRequest" parent="."]
[connection signal="request_completed" from="download_dlc_list" to="." method="_on_download_dlc_list_request_completed"]
